--- a/front/style1.css
+++ b/front/style1.css
@@ -107,8 +107,8 @@ header{
 
 .lower {
   display: flex;
-  align-items: right;
-  justify-content: end;
+  align-items: center;
+  justify-content: space-between;
   padding: 0 10%;
 }
 
@@ -335,7 +335,6 @@ height: 250px;
   border-radius: 50px;
   margin: 5px ;
   margin-left: 26%;
-  margin-top: 5%;
   align-content: center;
   display: flex; 
   position: relative;
