--- a/game/style2.css
+++ b/game/style2.css
@@ -27,9 +27,9 @@ main {
 }
 
 header {
-    width: 100%;
-    height: 25%;
-    margin: 0;
+width: 100%;
+height: 25%;
+margin: 0;
     padding: 0;
 }
 
@@ -105,10 +105,6 @@ header {
          2px -2px 0 #000,
         -2px  2px 0 #000,
          2px  2px 0 #000;
-    padding-left: 20px;
-    padding-right: 20px;
-    align-content: center;
-    margin-right: 10px;
 }
 @keyframes rotate-hourglass {
     from {
@@ -242,7 +238,7 @@ header {
 
 /* Estilo para el fondo del modal */
 .modal {
-    display: flex; 
+    display: none; 
     position: fixed; 
     z-index: 1; 
     left: 0;
@@ -267,7 +263,8 @@ header {
     align-items: center; 
     padding: 20px; 
     box-shadow: 0 5px 15px rgba(0,0,0,0.3); 
-    animation: fadeIn 0.5s;  
+    animation: fadeIn 0.5s; 
+    text-align: center; 
     color: #f7e034; 
     font-size: 30px; 
     font-family: Josefin Sans, Arial;
